# odyssey

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  appveyor.yml  codeship-services.yml  codeship-steps.yml  odyssey.toml  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.circleci/: config.yml
.codeship/: Dockerfile
.codeship/alpine/: Dockerfile
.github/workflows/: codeql-analysis.yml  pull_request_notifications.yml  python-package.yml
docker/alpine/: Dockerfile
docker/development/ubuntu/: Dockerfile
docker/development/windows_servercore/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: conf.py  index.rst
src/odyssey/: __init__.py  __main__.py  bind.py  cli.py  convert.py  core.py  parse.py  perforce_ftp.py  plugins.py  recursive_invoke.py  reflect.py
src/odyssey/cli_parser/: __init__.py  argument.py  pattern.py
src/odyssey/function_binder/: bind.py
src/odyssey/git/: __init__.py  cli.py
src/odyssey/git/repository/: __init__.py  cli.py  core.py
src/odyssey/name_resolver/: resolve.py
src/odyssey/odyssey_gui/: __main__.py
src/odyssey/python_reflector/: reflect.py
src/odyssey_tests/: __init__.py  bind_test_data.py  bind_tests.py  cli_tests.py  convert_tests.py  main_tests.py  parse_tests.py  recursive_invoke_tests.py  reflect_tests.py
src/odyssey_tests/cli_parser_tests/: argument_tests.py  pattern_tests.py
src/odyssey_tests/function_binder_tests/: bind_test_data.py  bind_tests.py
src/odyssey_tests/name_resolver_tests/: resolve_tests.py
src/odyssey_tests/python_reflector_tests/: reflect_tests.py
src/odyssey_tests/reflect_test_data/package_one/: module_four.py  module_three.py
src/odyssey_tests/reflect_test_data/package_one/module_four_compatibility/: module_four_36.py
src/odyssey_tests/test_data/directory_one/: module_one.py
src/odyssey_tests/test_data/package_one/: module_four.py  module_three.py
src/odyssey_tests/test_data/package_one/module_four_compatibility/: module_four_37.py  module_four_38.py
src/odyssey_tests/type_converter_tests/: convert_tests.py
src/requirements/: pip-tools.txt
src/tests/: test_main.py  test_plugins.py
