[tool.poetry]
name = "odyssey"
version = "1.0.0"
description = ""
readme = "README.rst"
license = "MIT"
authors = ["Justin Sharma <justin.elite@gmail.com>"]
packages = [
    { include = "odyssey", from = "src" },
]

[tool.poetry.scripts]
odyssey = "odyssey.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
pluggy = "^0.13.1"
click = "^7.1.2"
click-log = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.9.0"
sphinx = "^3.0.3"
black = "^19.10b0"
flake8 = "^3.8.2"
pylint = "^2.5.2"
tox = "^3.15.1"
coveralls = "^2.0.0"
coverage = "^5.1"
semver = "^2.10.1"
GitPython = "^3.1.3"
python-semantic-release = "^7.1.1"
PyGithub = "^1.51"
tomlkit = "^0.6.0"
pyinstaller = "^3.6"
pefile = "^2019.4.18"
pywin32 = { version = "^227", markers = "sys_platform == 'win32'" }
macholib = { version = "^1.14", markers = "sys_platform == 'darwin'" }

[tool.semantic_release]
version_variable = "src/odyssey/__init__.py:__version__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
